--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
-    "@testing-library/user-event": "^12.2.2"
+    "@testing-library/user-event": "^12.2.2",
+    "msw": "^0.21.3"
   }
 }
