--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.21.0",
+    "cross-fetch": "^3.0.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^2.26.2",
